# portfolio-flask-cicd-terraform-azure

./: README.md  app.py  global.vsdx  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: dev.yml  main.yml  master.yml  release.yml
Models/: projectModel.py
db/: projects.json
static/css/: styles.css
static/js/: scripts.js
templates/: about.html  layout.html  photos.html  projects.html
templates/components/: footer.html  navbar.html
terraform/: main.tf  provider.tf  variables.tf
tests/: test_app.py
tests/Models/: test_projectModel.py
