[tool.poetry]
name = "app"
version = "0.1.0"
description = "A small portfolio website built as a hands-on project to learn and master CI/CD, Infrastructure as Code (IaC), and cloud technologies."
authors = ["Kamoui <pannetier.mateo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
Flask-Testing = "^0.8.1"
pytest = "^8.3.1"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
